--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@types/leaflet": "^1.9.4",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
+    "leaflet": "^1.9.4",
+    "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
     "swiper": "^10.2.0",
     "tslib": "^2.3.0",
