--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@sweetalert2/ngx-sweetalert2": "^12.2.0",
     "@types/leaflet": "^1.9.4",
     "bootstrap": "^5.3.1",
     "font-awesome": "^4.7.0",
     "leaflet": "^1.9.4",
     "ngx-cookie-service": "^16.0.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.31",
     "swiper": "^10.2.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
